--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.23.0",
     "debug": "^2.2.0",
@@ -22,7 +24,10 @@
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "lodash": "^3.10.1",
     "node-sass": "^3.4.2",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "uglify-loader": "^1.3.0",
