--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "carousel"
   ],
   "dependencies": {
-    "elasticslider-core": "~0.4.7",
+    "elasticslider-core": "^0.5.0",
     "react": "~0.14.2"
   },
   "devDependencies": {}
