--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "React-ElasticSlider",
-  "version": "0.0.1",
-  "description": "An agnostic and responsive slider.",
+  "version": "0.2.0",
+  "description": "An agnostic and responsive slider for React.",
   "homepage": "https://github.com/JamyGolden/React-ElasticSlider",
   "main": "dist/react-elasticslider.min.js",
   "files": [
@@ -13,33 +13,24 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.4.5",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
-    "css-loader": "^0.23.0",
+    "css-loader": "^0.23.1",
     "debug": "^2.2.0",
     "del": "^2.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-header": "^1.7.1",
-    "gulp-react": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
+    "html-loader": "^0.4.3",
     "lodash": "^3.10.1",
     "node-sass": "^3.4.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.3",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "uglify-loader": "^1.3.0",
-    "webpack": "^1.12.12",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "start": "gulp serve",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build"
+    "dist": "webpack",
+    "start": "webpack && webpack --config webpack.config.demo.js && webpack-dev-server --devtool eval --progress --colors --hot --content-base build --port 5000"
   },
   "author": "Jamy Golden",
   "license": "MIT",
