--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "files": [
     "dist/react-elasticslider.min.js"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "elasticslider-core": "^0.5.2"
+  },
   "devDependencies": {
     "babel-loader": "^6.2.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.4.5",
