--- a/package.json
+++ b/package.json
@@ -1,44 +1,43 @@
 {
-  "name": "React-ElasticSlider",
+  "name": "react-elasticslider",
   "version": "0.2.0",
   "description": "An agnostic and responsive slider for React.",
-  "homepage": "https://github.com/JamyGolden/React-ElasticSlider",
+  "homepage": "https://github.com/JamyGolden/react-elasticslider",
   "main": "dist/react-elasticslider.min.js",
   "files": [
     "dist/react-elasticslider.min.js"
   ],
   "dependencies": {
-    "elasticslider-core": "^0.5.2"
+    "elasticslider-core": "^0.5.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.3"
   },
   "devDependencies": {
     "babel-loader": "^6.2.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.4.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
-    "css-loader": "^0.23.1",
-    "debug": "^2.2.0",
-    "del": "^2.1.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-loader": "^0.4.3",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^4.1.0",
+    "gulp-header": "^1.8.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
     "lodash": "^3.10.1",
-    "node-sass": "^3.4.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.3",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "uglify-loader": "^1.3.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "node-sass": "^3.4.2"
   },
   "scripts": {
-    "dist": "webpack",
-    "setupBuild": "rm -r build && mkdir build && webpack && cp ./dist/react-elasticslider.min.css ./build",
-    "start": "npm run-script setupBuild && webpack --config webpack.config.demo.js && webpack-dev-server --devtool eval --progress --colors --hot --content-base build --port 5000"
+    "dist": "gulp dist",
+    "start": "gulp serve"
   },
   "author": "Jamy Golden",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JamyGolden/React-ElasticSlider.git"
+    "url": "https://github.com/JamyGolden/react-elasticslider.git"
   }
 }
